--- a/.github/workflows/pullrequest-check.yml
+++ b/.github/workflows/pullrequest-check.yml
@@ -13,7 +13,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2 # 最新の2つのコミットをフェッチ
+          fetch-depth: 50 # プルリクエストの差分を取得するのに十分な履歴
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Fetch base branch for comparison
+        run: |
+          git fetch origin ${{ github.base_ref }}:refs/remotes/origin/${{ github.base_ref }}
 
       - name: Get Changed Directories
         uses: ./.github/actions/get-changed-directories
