--- a/packages/chatbot-ui/package.json
+++ b/packages/chatbot-ui/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
