feat: Allow avatar customization via props

--- a/packages/chatbot-ui/biome.json
+++ b/packages/chatbot-ui/biome.json
@@ -20,6 +20,9 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "complexity": {
+        "noUselessFragments": "off"
+      },
       "correctness": {
         "noUnusedImports": "warn",
         "noUnusedVariables": "warn",
