--- a/projects/chat-mcp-client/package.json
+++ b/projects/chat-mcp-client/package.json
@@ -2,13 +2,16 @@
   "name": "chat-mcp-client",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "format": "biome check --write --unsafe ."
+    "lint": "tsc && biome lint --error-on-warnings ./src",
+    "format": "biome check --write --unsafe .",
+    "test": "bun test"
   },
   "dependencies": {
     "hono": "^4.7.10"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "typescript": "^5.8.3"
   }
 }
