--- a/projects/chat-mcp-client/tsconfig.json
+++ b/projects/chat-mcp-client/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "strict": true,
+    "noEmit": true,
+    "skipLibCheck": true,
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
   }
