--- a/projects/chat-mcp-client/package.json
+++ b/projects/chat-mcp-client/package.json
@@ -7,6 +7,9 @@
     "test": "bun test"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
+    "@hono/standard-validator": "^0.1.2",
+    "ai": "^4.3.16",
     "hono": "^4.7.11"
   },
   "devDependencies": {
