--- a/projects/chat-mcp-client/package.json
+++ b/projects/chat-mcp-client/package.json
@@ -7,7 +7,7 @@
     "test": "bun test"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/openai-compatible": "^0.2.14",
     "@hono/standard-validator": "^0.1.2",
     "ai": "^4.3.16",
     "hono": "^4.7.11"
