--- a/projects/chat-mcp-client/.devcontainer/devcontainer.json
+++ b/projects/chat-mcp-client/.devcontainer/devcontainer.json
@@ -10,7 +10,9 @@
     "ghcr.io/cirolosapio/devcontainers-features/alpine-curl:0": {},
     "ghcr.io/shyim/devcontainers-features/bun:0": {}
   },
-  "appPort": ["3000:3000"],
+  "appPort": [
+    "3000:3000"
+  ],
   "containerEnv": {
     "SHELL": "/bin/bash"
   },
@@ -21,7 +23,7 @@
       "settings": {
         "editor.tabSize": 2,
         "editor.formatOnSave": true,
-        "biome.lspBin": "./node_modules/.bin/biome",
+        "biome.lsp.bin": "./node_modules/.bin/biome",
         "[typescript]": {
           "editor.defaultFormatter": "biomejs.biome"
         },
