--- a/projects/portfolio/.devcontainer/devcontainer.json
+++ b/projects/portfolio/.devcontainer/devcontainer.json
@@ -17,7 +17,7 @@
       "settings": {
         "editor.tabSize": 2,
         "editor.formatOnSave": true,
-        "biome.lspBin": "./node_modules/.bin/biome",
+        "biome.lsp.bin": "./node_modules/.bin/biome",
         "[typescriptreact]": {
           "editor.defaultFormatter": "biomejs.biome"
         },
