feat: Add feature to close preview with ESC key

--- a/projects/portfolio/.devcontainer/devcontainer.json
+++ b/projects/portfolio/.devcontainer/devcontainer.json
@@ -44,6 +44,7 @@
         "oderwat.indent-rainbow",
         "wix.vscode-import-cost",
         "github.vscode-pull-request-github",
+        "saoudrizwan.claude-dev",
         // for Tailwind CSS --
         "shardulm94.trailing-spaces",
         // "emeraldwalk.RunOnSave",
