feat: update dockerfile

--- a/projects/portfolio/.devcontainer/devcontainer.json
+++ b/projects/portfolio/.devcontainer/devcontainer.json
@@ -1,7 +1,8 @@
 {
   "name": "portfolio",
   "build": {
-    "dockerfile": "Dockerfile"
+    "dockerfile": "../Dockerfile",
+    "target": "dev"
   },
   "appPort": [
     "3000:3000"
