--- a/packages/chatbot-ui/.devcontainer/devcontainer.json
+++ b/packages/chatbot-ui/.devcontainer/devcontainer.json
@@ -10,9 +10,7 @@
     "ghcr.io/cirolosapio/devcontainers-features/alpine-curl:0": {},
     "ghcr.io/shyim/devcontainers-features/bun:0": {}
   },
-  "appPort": [
-    "3000:3000"
-  ],
+  "appPort": ["3000:3000"],
   "containerEnv": {
     "SHELL": "/bin/bash"
   },
