--- a/packages/chatbot-ui/package.json
+++ b/packages/chatbot-ui/package.json
@@ -10,6 +10,8 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@hono/react-renderer": "^1.0.1",
+    "@hono/zod-validator": "^0.7.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -22,11 +24,11 @@
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.51"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@hono/react-renderer": "^1.0.1",
     "@hono/vite-build": "^1.6.2",
     "@hono/vite-dev-server": "^0.19.1",
     "@shadcn/ui": "^0.0.4",
