--- a/deploy/litellm.yml
+++ b/deploy/litellm.yml
@@ -17,10 +17,11 @@ services:
       - litellm-db
 
   litellm-db:
+    container_name: itellm-db
     image: postgres:17-alpine
     restart: always
     ports:
-      - 5432:5432
+      - 4001:5432
     env_file:
       - .env.secret
     environment:
