--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-router": "^1.120.16",
     "hono": "^4.7.11",
+    "mermaid": "^11.6.0",
     "openai": "^5.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
