--- a/projects/u7chat/package.json
+++ b/projects/u7chat/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write src"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -14,14 +15,16 @@
     "next": "15.3.3"
   },
   "devDependencies": {
-    "typescript": "^5.8.3",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "^22.15.30",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
-    "@tailwindcss/postcss": "^4.1.8",
-    "tailwindcss": "^4.1.8",
     "eslint": "^9.28.0",
     "eslint-config-next": "15.3.3",
-    "@eslint/eslintrc": "^3.3.1"
+    "eslint-config-prettier": "^10.1.5",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.8",
+    "typescript": "^5.8.3"
   }
 }
