--- a/packages/chatbot-ui/package.json
+++ b/packages/chatbot-ui/package.json
@@ -1,9 +1,11 @@
 {
   "name": "chatbot-ui",
   "type": "module",
+  "main": "lib/index.js",
   "scripts": {
     "dev": "DEV_MODE=true dotenv vite",
     "build": "vite build --mode client && vite build --mode server",
+    "build:lib": "vite build --mode lib && node scripts/generate-lib-index.js",
     "start": "node dist/index.js",
     "lint": "tsc && biome lint --error-on-warnings ./src",
     "format": "biome check --write --unsafe .",
