--- a/packages/chatbot-ui/package.json
+++ b/packages/chatbot-ui/package.json
@@ -3,11 +3,11 @@
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
-  "types": "./dist/types/chatbot-ui/index.d.ts",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "types": "./dist/types/chatbot-ui/index.d.ts"
+      "types": "./dist/types/index.d.ts"
     }
   },
   "scripts": {
