feat: Add database integration with Drizzle ORM and PostgreSQL

--- a/projects/portfolio/.env.example
+++ b/projects/portfolio/.env.example
@@ -1,4 +1,5 @@
 VITE_APP_VERSION=dev
 SERVER_PORT=3000
+DATABASE_URL=postgresql://{{ user }}:{{ password }}@localhost:5432/{{ database }}
 CHAT_CONVERSATION_ENABLED=TRUE
 CHAT_CONVERSATION_USER=test@example.com
