--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -7,22 +7,28 @@
     "build": "vite build",
     "start": "NODE_ENV=production bunx tsx ./src/server/node-server.ts",
     "lint": "tsc && biome lint ./src",
-    "format": "biome check ./src --write --unsafe"
+    "format": "biome check ./src --write --unsafe",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:seed:users": "dotenv -- bun run src/server/db/seeders/users.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.4",
     "@hono/standard-validator": "^0.1.2",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-router": "^1.120.18",
+    "drizzle-orm": "^0.44.2",
     "hono": "^4.7.11",
     "mermaid": "^11.6.0",
     "openai": "^5.1.1",
+    "pg": "^8.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "tsx": "^4.19.4",
+    "uuidv7": "^1.0.2",
     "zod": "^3.25.56"
   },
   "devDependencies": {
@@ -32,10 +38,12 @@
     "@tanstack/react-router-devtools": "^1.120.18",
     "@tanstack/router-plugin": "^1.120.18",
     "@types/node": "^22.15.30",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
     "@types/react-syntax-highlighter": "^15.5.13",
     "dotenv-cli": "^8.0.0",
+    "drizzle-kit": "^0.31.1",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3",
