--- a/projects/portfolio/biome.json
+++ b/projects/portfolio/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": ["node_modules", "src/client/routeTree.gen.ts", "src/server/app.d.ts"]
+    "ignore": ["node_modules", "dist", "src/client/routeTree.gen.ts", "src/server/app.d.ts"]
   },
   "formatter": {
     "enabled": true,
