--- a/projects/portfolio/tsconfig.json
+++ b/projects/portfolio/tsconfig.json
@@ -9,8 +9,13 @@
     "jsx": "react-jsx",
     "jsxImportSource": "react",
     "paths": {
-      "@/*": ["./src/*"]
+      "#/*": [
+        "./src/*"
+      ]
     }
   },
-  "exclude": ["node_modules"] // コンパイル対象外
+  // コンパイル対象外
+  "exclude": [
+    "node_modules"
+  ]
 }
