--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -27,6 +27,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "tsx": "^4.20.3",
+    "uuid": "^11.1.0",
     "uuidv7": "^1.0.2",
     "zod": "^3.25.64"
   },
