fix: add ignore rule useUniqueElementIds

--- a/projects/portfolio/biome.json
+++ b/projects/portfolio/biome.json
@@ -37,6 +37,7 @@
         "noArrayIndexKey": "off"
       },
       "nursery": {
+        "useUniqueElementIds": "off",
         "useSortedClasses": {
           "level": "error",
           "fix": "unsafe",
