feat: Encrypt API keys for enhanced security

--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -17,6 +17,7 @@
     "@hono/standard-validator": "^0.1.2",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-router": "^1.121.21",
+    "crypto-js": "^4.2.0",
     "drizzle-orm": "^0.44.2",
     "hono": "^4.7.11",
     "openai": "^5.5.1",
@@ -37,6 +38,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "@tanstack/react-router-devtools": "^1.121.21",
     "@tanstack/router-plugin": "^1.121.21",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.15.32",
     "@types/pg": "^8.15.4",
     "@types/react": "^19.1.8",
