--- a/projects/hono-mcp-middleware-server/package.json
+++ b/projects/hono-mcp-middleware-server/package.json
@@ -4,6 +4,7 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.12.3",
     "hono": "^4.7.11"
   },
   "devDependencies": {
