feat: `bun i zod`

--- a/projects/hono-mcp-middleware-server/package.json
+++ b/projects/hono-mcp-middleware-server/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "@hono/mcp": "^0.1.0",
     "@modelcontextprotocol/sdk": "^1.12.3",
-    "hono": "^4.7.11"
+    "hono": "^4.7.11",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/bun": "latest"
