--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -33,7 +33,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.0.1",
+    "@biomejs/biome": "2.0.0",
     "@hono/vite-dev-server": "^0.19.1",
     "@tailwindcss/postcss": "^4.1.10",
     "@tanstack/react-router-devtools": "^1.121.27",
