--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -16,6 +16,7 @@
     "@hono/node-server": "^1.14.4",
     "@hono/standard-validator": "^0.1.2",
     "@tailwindcss/typography": "^0.5.16",
+    "@tanstack/react-query": "^5.80.10",
     "@tanstack/react-router": "^1.121.27",
     "crypto-js": "^4.2.0",
     "drizzle-orm": "^0.44.2",
