--- a/projects/portfolio/.devcontainer/devcontainer.json
+++ b/projects/portfolio/.devcontainer/devcontainer.json
@@ -48,6 +48,7 @@
         "github.vscode-pull-request-github",
         "saoudrizwan.claude-dev",
         "cweijan.vscode-mysql-client2",
+        "wayou.vscode-todo-highlight",
         // for Tailwind CSS --
         "shardulm94.trailing-spaces",
         // "emeraldwalk.RunOnSave",
