--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -5,7 +5,7 @@
     "dev": "dotenv -- vite --mode dev --host 0.0.0.0",
     "typegen": "vite build --mode typegen",
     "build": "vite build",
-    "start": "NODE_ENV=production bunx tsx ./src/server/node-server.ts",
+    "start": "NODE_ENV=production dotenv -- bunx tsx ./src/server/node-server.ts",
     "lint": "tsc && biome lint ./src",
     "format": "biome check ./src --write --unsafe",
     "db:generate": "drizzle-kit generate",
