--- a/projects/hono-mcp-server/package.json
+++ b/projects/hono-mcp-server/package.json
@@ -6,15 +6,15 @@
     "format": "biome check --write ."
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.12.1",
-    "hono": "^4.7.11",
-    "hono-mcp-server-sse-transport": "^0.0.6",
+    "@modelcontextprotocol/sdk": "^1.13.1",
+    "hono": "^4.8.2",
+    "hono-mcp-server-sse-transport": "^0.0.7",
     "log4js": "^6.9.1",
-    "zod": "^3.25.48"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@types/bun": "latest",
+    "@biomejs/biome": "^2.0.5",
+    "@types/bun": "^1.2.17",
     "typescript": "^5.8.3"
   }
 }
