--- a/projects/hono-mcp-server/package.json
+++ b/projects/hono-mcp-server/package.json
@@ -6,6 +6,7 @@
     "format": "biome check --write ."
   },
   "dependencies": {
+    "@hono/mcp": "^0.1.0",
     "@modelcontextprotocol/sdk": "^1.13.1",
     "hono": "^4.8.2",
     "log4js": "^6.9.1",
