refactor: apply format

--- a/projects/hono-mcp-server/biome.json
+++ b/projects/hono-mcp-server/biome.json
@@ -13,7 +13,13 @@
     "enabled": true,
     "indentStyle": "space"
   },
-  "assist": { "actions": { "source": { "organizeImports": "on" } } },
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
+  },
   "linter": {
     "enabled": true,
     "rules": {
