--- a/projects/fastapi-mcp-server/pyproject.toml
+++ b/projects/fastapi-mcp-server/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi-mcp>=0.3.4",
     "fastapi[standard]>=0.115.12",
 ]
