fix: test stage

--- a/projects/portfolio/Dockerfile
+++ b/projects/portfolio/Dockerfile
@@ -49,6 +49,7 @@ COPY . .
 
 RUN bun install --frozen-lockfile \
   && bun run lint \
+  && bun run typegen \
   && bun run build
 
 # -----------------------------------------------
