--- a/projects/edit-vid/.devcontainer/devcontainer.json
+++ b/projects/edit-vid/.devcontainer/devcontainer.json
@@ -18,6 +18,7 @@
         "editor.formatOnSave": true,
         "python.defaultInterpreterPath": ".venv/bin/python",
         "[python]": {
+          "flake8.enabled": false,
           "editor.defaultFormatter": "charliermarsh.ruff",
           "editor.codeActionsOnSave": {
             "source.fixAll": "explicit",
