--- a/projects/file_server/package.json
+++ b/projects/file_server/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "file_server",
-  "scripts": {
-    "dev": "bun run --hot src/index.ts"
-  },
-  "dependencies": {
-    "hono": "^4.8.5"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  }
+	"name": "file_server",
+	"scripts": {
+		"dev": "bun run --hot src/index.ts",
+    "lint": "biome lint --write",
+    "format": "biome format --write"
+	},
+	"dependencies": {
+		"hono": "^4.8.5"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.1.2",
+		"@types/bun": "latest"
+	}
 }
