--- a/projects/file_server/package.json
+++ b/projects/file_server/package.json
@@ -3,10 +3,13 @@
   "scripts": {
     "dev": "bun run --hot src/index.ts",
     "lint": "biome lint --write",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "test": "bun test"
   },
   "dependencies": {
-    "hono": "^4.8.5"
+    "@hono/zod-validator": "^0.7.2",
+    "hono": "^4.8.5",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
