--- a/projects/file-server/package.json
+++ b/projects/file-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file_server",
+  "name": "file-server",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
     "lint": "biome lint --write",
