--- a/projects/file-server/package.json
+++ b/projects/file-server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "file-server",
   "scripts": {
-    "dev": "bun run --hot src/index.ts",
+    "dev": "bun run --hot src/index.tsx",
     "lint": "biome lint --write",
     "format": "biome format --write",
     "test": "bun test"
