--- a/projects/file-server/Dockerfile
+++ b/projects/file-server/Dockerfile
@@ -42,6 +42,7 @@ ENV UPLOAD_DIR=/app/uploads
 
 COPY --from=builder /app/node_modules ./node_modules
 COPY src ./src
+COPY tsconfig.json ./tsconfig.json
 
 RUN mkdir -p $UPLOAD_DIR && \
     chown -R node:node $UPLOAD_DIR
