--- a/projects/file-server/package.json
+++ b/projects/file-server/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@hono/zod-validator": "^0.7.2",
     "hono": "^4.8.5",
+    "mime-types": "^3.0.1",
     "zod": "^4.0.5"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/mime-types": "^3.0.1"
   }
 }
