feat: Add action to remove old Docker images and update workflow

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -33,6 +33,12 @@ jobs:
         run: |
           docker images
 
+      - name: Remove Old Docker Images
+        if: env.BUILD_PROJECT != ''
+        uses: ./.github/actions/remove-old-docker-images
+        with:
+          keep_count: 3
+
       - name: Push Docker Images
         if: env.BUILD_PROJECT != ''
         uses: ./.github/actions/push-docker-images
