--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -39,3 +39,25 @@ jobs:
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.PRIVATE_REPO_TOKEN }}
+
+      - name: Show project_names_csv
+        run: echo "project_names_csv = ${{ steps.push_images.outputs.project_names_csv }}"
+
+      # - name: Clean Up Docker Images
+      #   if: env.BUILD_PROJECT != ''
+      #   env:
+      #     GH_TOKEN: ${{ secrets.PRIVATE_REPO_TOKEN }}
+      #     REPO_NAME: ${{ secrets.PRIVATE_REPO_NAME }}
+      #     KEEP_COUNT: 3
+      #   run: |
+      #     curl -X POST \
+      #       -H "Accept: application/vnd.github+json" \
+      #       -H "Authorization: Bearer $GH_TOKEN" \
+      #       https://api.github.com/repos/$REPO_NAME/dispatches \
+      #       -d '{
+      #         "event_type": "deploy_trigger",
+      #         "client_payload": {
+      #           "target": "xxxx",
+      #           "keep_count": "$KEEP_COUNT"
+      #         }
+      #       }'
