--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -48,6 +48,7 @@ jobs:
           REPO_NAME: ${{ secrets.PRIVATE_REPO_NAME }}
           KEEP_COUNT: 3
         run: |
+          export KEEP_COUNT="$KEEP_COUNT"
           echo "project_names_csv = ${{ steps.push_images.outputs.project_names_csv }}"
           curl -X POST \
             -H "Accept: application/vnd.github+json" \
@@ -57,6 +58,6 @@ jobs:
               "event_type": "deploy_trigger",
               "client_payload": {
                 "target": "${{ steps.push_images.outputs.project_names_csv }}",
-                "keep_count": "$KEEP_COUNT"
+                "keep_count": "'"$KEEP_COUNT"'"
               }
             }'
