--- a/packages/chatbot-ui/package.json
+++ b/packages/chatbot-ui/package.json
@@ -38,7 +38,7 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.1.1",
+    "@biomejs/biome": "^2.1.3",
     "@hono/vite-build": "^1.7.0",
     "@hono/vite-dev-server": "^0.20.0",
     "@shadcn/ui": "^0.0.4",
