--- a/projects/u7chat/package.json
+++ b/projects/u7chat/package.json
@@ -23,6 +23,7 @@
     "eslint": "^9.34.0",
     "eslint-config-next": "15.5.2",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.12",
     "typescript": "^5.9.2"
   }
