--- a/projects/u7chat/package.json
+++ b/projects/u7chat/package.json
@@ -10,9 +10,9 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "next": "15.5.2",
     "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "next": "15.5.2"
+    "react-dom": "19.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
