fix: add postCreateCommand

--- a/projects/long-running-mcp-server/.devcontainer/devcontainer.json
+++ b/projects/long-running-mcp-server/.devcontainer/devcontainer.json
@@ -6,6 +6,7 @@
     "target": "dev"
   },
   "remoteUser": "vscode",
+  "postCreateCommand": "bun i",
   "customizations": {
     "vscode": {
       "settings": {
