--- a/projects/long-running-mcp-server/.devcontainer/devcontainer.json
+++ b/projects/long-running-mcp-server/.devcontainer/devcontainer.json
@@ -11,7 +11,14 @@
     "vscode": {
       "settings": {
         "editor.tabSize": 2,
-        "editor.formatOnSave": true
+        "editor.formatOnSave": true,
+        "biome.lsp.bin": "node_modules/.bin/biome",
+        "[typescript]": {
+          "editor.defaultFormatter": "biomejs.biome",
+          "editor.codeActionsOnSave": {
+            "source.fixAll.biome": "explicit"
+          }
+        }
       },
       "extensions": [
         "biomejs.biome",
