--- a/projects/long-running-mcp-server/package.json
+++ b/projects/long-running-mcp-server/package.json
@@ -6,7 +6,10 @@
     "format": "biome format --write src"
   },
   "dependencies": {
-    "hono": "^4.9.6"
+    "@hono/mcp": "^0.1.2",
+    "@modelcontextprotocol/sdk": "^1.17.5",
+    "hono": "^4.9.6",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.2",
