--- a/projects/long-running-mcp-server/package.json
+++ b/projects/long-running-mcp-server/package.json
@@ -12,7 +12,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.2",
+    "@biomejs/biome": "^2.2.3",
     "@types/bun": "latest"
   }
 }
