--- a/projects/u7chat/package.json
+++ b/projects/u7chat/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.28",
+    "@ai-sdk/rsc": "^1.0.41",
     "next": "^15.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
