--- a/projects/u7agent/package.json
+++ b/projects/u7agent/package.json
@@ -15,7 +15,8 @@
     "next": "^15.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "streamdown": "^1.3.0"
+    "streamdown": "^1.3.0",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
