--- a/projects/u7agent/package.json
+++ b/projects/u7agent/package.json
@@ -10,13 +10,13 @@
     "format": "prettier --write src"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.32",
-    "@ai-sdk/rsc": "^1.0.47",
-    "next": "^15.5.3",
+    "@ai-sdk/openai": "^2.0.35",
+    "@ai-sdk/rsc": "^1.0.52",
+    "next": "^15.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "streamdown": "^1.3.0",
-    "zod": "^4.1.9"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -24,8 +24,8 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "eslint": "^9.35.0",
-    "eslint-config-next": "15.5.3",
+    "eslint": "^9.36.0",
+    "eslint-config-next": "^15.5.4",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.13",
