--- a/projects/u7agent/.prettierrc.yml
+++ b/projects/u7agent/.prettierrc.yml
@@ -3,4 +3,10 @@ printWidth: 120
 singleQuote: true
 jsxSingleQuote: true
 plugins:
-  - prettier-plugin-tailwindcss
+  - "prettier-plugin-tailwindcss"
+  - "@ianvs/prettier-plugin-sort-imports"
+importOrder:
+  - '^@[^/]'   # 「@ + その次が '/' じゃない」; スコープ付きパッケージ
+  - ''         # 空行区切り
+  - '^@/'      # プロジェクト絶対パス（@/ で始まるもの）
+  - '^[./]'    # 相対パスやそれ以外
