--- a/projects/u7agent/package.json
+++ b/projects/u7agent/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.35",
     "@ai-sdk/rsc": "^1.0.52",
+    "@keyv/sqlite": "^4.0.5",
+    "keyv": "^5.5.3",
     "next": "^15.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
