--- a/projects/portfolio/biome.json
+++ b/projects/portfolio/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.7/schema.json",
   "vcs": {
     "enabled": false,
     "clientKind": "git",
@@ -46,13 +46,8 @@
           "level": "error",
           "fix": "unsafe",
           "options": {
-            "attributes": [
-              "className",
-              "tw"
-            ],
-            "functions": [
-              "tw"
-            ]
+            "attributes": ["className", "tw"],
+            "functions": ["tw"]
           }
         }
       },
