--- a/.github/workflows/pullrequest-check.yml
+++ b/.github/workflows/pullrequest-check.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   pull-request-check-if-changes-detected:
-    runs-on: ubuntu-slim
+    runs-on: ubuntu-latest # Docker Command を使うので ubuntu-slim は利用できない
 
     steps:
       - name: Checkout code
