--- a/deploy/dozzle.yml
+++ b/deploy/dozzle.yml
@@ -12,5 +12,6 @@ services:
     environment:
       DOZZLE_ENABLE_SHELL: true
       DOZZLE_ENABLE_ACTIONS: true
+      DOZZLE_NO_ANALYTICS: true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
