--- a/projects/hiit-timer/package.json
+++ b/projects/hiit-timer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hiit-timer",
   "scripts": {
-    "dev": "bun run --hot src/index.tsx"
+    "dev": "bun build src/client.tsx --outdir static --target browser --minify --watch & bun --hot src/index.tsx"
   },
   "dependencies": {
     "hono": "^4.11.3"
