--- a/projects/portfolio/package.json
+++ b/projects/portfolio/package.json
@@ -6,8 +6,10 @@
     "typegen": "vite build --mode typegen",
     "build": "vite build",
     "start": "NODE_ENV=production dotenv -- bunx tsx ./src/server/node-server.ts",
-    "lint": "tsc && biome lint ./src",
-    "format": "biome check ./src --write --unsafe",
+    "lint": "tsc && oxlint",
+    "lint:fix": "oxlint --fix",
+    "format:check": "oxfmt --check",
+    "format": "oxfmt",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:seed:users": "dotenv -- bun run src/db/seeders/users.ts"
@@ -33,7 +35,6 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.11",
     "@hono/vite-dev-server": "^0.24.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-router-devtools": "^1.150.0",
@@ -46,6 +47,8 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "dotenv-cli": "^11.0.0",
     "drizzle-kit": "^0.31.8",
+    "oxfmt": "^0.24.0",
+    "oxlint": "^1.39.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
